--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,13 @@
 pmtu = 200
 
 [Servers]
-joinsg = joinsg.net:11453
-Exabytes = switch.exabytes.space:11451
-tekn0 = tekn0.net:11451
-Layer8 = layer8.fail:11451
-servegame = switch.servegame.com:11451
-Jayseateam = switch.jayseateam.nl:11451
-Teknik = lan.teknik.app:11451
+tekn0.net = tekn0.net:11451
+lan.nonny.horse = lan.nonny.horse:11451
+switch.servegame.com = switch.servegame.com:11451
+switch-lanyplay-de = switch-lanyplay-de.ddns.net:11451
+switch.nvds.be = switch.nvds.be:11451
+switch.jayseateam.nl = switch.jayseateam.nl:11451
+switchlanplay-tw.ddns.net = switchlanplay-tw.ddns.net:11451
+erdbeerbaerlp.de = erdbeerbaerlp.de:11451
+
+
