--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [Servers]
-tekn0.net = tekn0.net:11451
-lan.nonny.horse = lan.nonny.horse:11451
-switch.servegame.com = switch.servegame.com:11451
-switch-lanyplay-de = switch-lanyplay-de.ddns.net:11451
-switch.nvds.be = switch.nvds.be:11451
-switch.jayseateam.nl = switch.jayseateam.nl:11451
-switchlanplay-tw.ddns.net = switchlanplay-tw.ddns.net:11451
-erdbeerbaerlp.de = erdbeerbaerlp.de:11451
+01 = tekn0.net:11451
+02 = lan.nonny.horse:11451
+03 = switch.servegame.com:11451
+04 = switch-lanyplay-de.ddns.net:11451
+05 = switch.nvds.be:11451
+06 = switch.jayseateam.nl:11451
+07 = switchlanplay-tw.ddns.net:11451
+08 = erdbeerbaerlp.de:11451
+
 
 
